--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -33,6 +33,11 @@
             android:layout_height="@dimen/app_bar_height"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="300dp" />
+
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
                 android:layout_width="match_parent"
@@ -67,6 +72,7 @@
                 android:paddingTop="16dp"
                 android:paddingEnd="@dimen/marginEnd"
                 android:paddingBottom="16dp"
+                android:text="@{property.type}"
                 android:textIsSelectable="true"
                 tools:context="com.example.myapplication.ItemDetailFragment" />
 
