--- a/app/src/main/res/layout/property_list_content.xml
+++ b/app/src/main/res/layout/property_list_content.xml
@@ -30,7 +30,7 @@
                 android:layout_width="200dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center"
-                android:contentDescription="@null"
+                android:contentDescription="@string/property_picture"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:imagePath="@{property.media.photos}"
