--- a/app/src/main/res/layout/property_list_content.xml
+++ b/app/src/main/res/layout/property_list_content.xml
@@ -45,6 +45,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
+                android:textStyle="bold"
                 android:text="@{property.type}"
                 android:textAppearance="?attr/textAppearanceListItem"
                 app:layout_constraintBottom_toTopOf="@id/text_area"
@@ -69,7 +70,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/text_margin"
-                android:text="@{property.price.toString()}"
+                price="@{property.price}"
+                android:textColor="@color/colorAccent"
                 android:textAppearance="?attr/textAppearanceListItem"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
