--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -124,7 +124,7 @@
 
                 <TextView
                     android:id="@+id/item_type"
-                    style="?android:attr/textAppearanceLarge"
+                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingStart="@dimen/marginEnd"
@@ -138,13 +138,15 @@
 
                 <TextView
                     android:id="@+id/item_price"
-                    style="?android:attr/textAppearanceLarge"
+                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingStart="@dimen/marginEnd"
                     android:paddingTop="8dp"
                     android:paddingEnd="@dimen/marginEnd"
                     price="@{property.price}"
+                    android:textColor="@color/colorAccent"
+                    android:textStyle="bold"
                     android:textIsSelectable="true"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/item_type"
