- update layouts margins
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/characteristics_layout.xml
+++ b/app/src/main/res/layout/characteristics_layout.xml
@@ -19,11 +19,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
+            android:layout_marginEnd="@dimen/marginEnd"
             android:hint="@string/price"
-            android:text="@{String.valueOf(property.price)}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@id/surface_text_input"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.textfield.TextInputEditText
@@ -35,7 +35,6 @@
             android:hint="@string/surface"
             android:inputType="number"
             android:maxLength="2"
-            android:text="@{String.valueOf(property.surface)}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintEnd_toStartOf="@id/number_of_room_text_input"
@@ -50,7 +49,6 @@
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/rooms"
             android:inputType="number"
-            android:text="@{String.valueOf(property.roomNumber)}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintEnd_toStartOf="@id/number_of_bedroom_text_input"
@@ -65,7 +63,6 @@
             android:layout_marginTop="@dimen/marginTop"
             android:hint="@string/bedrooms"
             android:inputType="number"
-            android:text="@{String.valueOf(property.bedroomNumber)}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintEnd_toStartOf="@id/number_of_bathroom_text_input"
@@ -78,9 +75,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/marginStart"
             android:layout_marginTop="@dimen/marginTop"
+            android:layout_marginEnd="@dimen/marginEnd"
             android:hint="@string/bathroom"
             android:inputType="number"
-            android:text="@{String.valueOf(property.bathroomNumber)}"
             android:textSize="@dimen/textSize"
             app:endIconMode="clear_text"
             app:layout_constraintEnd_toEndOf="parent"
