- update layout property_detail.xml
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -123,32 +123,6 @@
                     tools:context="com.example.myapplication.ItemDetailFragment" />
 
                 <TextView
-                    android:id="@+id/item_type"
-                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/marginEnd"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="@dimen/marginEnd"
-                    android:text="@{property.type}"
-                    android:textIsSelectable="true"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/item_address_suite"
-                    tools:context="com.example.myapplication.ItemDetailFragment" />
-
-                <TextView
-                    android:id="@+id/surface_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/marginEnd"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="@dimen/marginEnd"
-                    android:text="@{@string/surface_text(property.surface)}"
-                    app:drawableLeftCompat="@drawable/ic_square_foot_24dp"
-                    app:layout_constraintStart_toEndOf="@id/item_type"
-                    app:layout_constraintTop_toBottomOf="@id/item_address_suite" />
-
-                <TextView
                     android:id="@+id/item_price"
                     style="@style/TextAppearance.MaterialComponents.Subtitle1"
                     price="@{property.price}"
@@ -161,8 +135,35 @@
                     android:textIsSelectable="true"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/item_type"
+                    app:layout_constraintTop_toBottomOf="@id/item_address_suite"
                     tools:context="com.example.myapplication.ItemDetailFragment" />
+
+                <TextView
+                    android:id="@+id/item_type"
+                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/marginEnd"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:text="@{property.type}"
+                    android:textIsSelectable="true"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/item_price"
+                    tools:context="com.example.myapplication.ItemDetailFragment" />
+
+                <TextView
+                    android:id="@+id/surface_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/marginEnd"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:text="@{@string/surface_text(property.surface)}"
+                    app:drawableLeftCompat="@drawable/ic_square_foot_24dp"
+                    app:layout_constraintStart_toEndOf="@id/item_type"
+                    app:layout_constraintTop_toBottomOf="@id/item_price" />
+
 
                 <TextView
                     android:id="@+id/rooms_text"
@@ -174,8 +175,7 @@
                     android:text="@{@plurals/room_plural(property.roomNumber,property.roomNumber)}"
                     app:drawableLeftCompat="@drawable/ic_room_24dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/bedrooms_text"
-                    app:layout_constraintTop_toBottomOf="@id/item_price" />
+                    app:layout_constraintTop_toBottomOf="@id/item_type" />
 
                 <TextView
                     android:id="@+id/bedrooms_text"
@@ -188,7 +188,7 @@
                     app:drawableLeftCompat="@drawable/ic_bedroom_parent_24dp"
                     app:layout_constraintEnd_toStartOf="@id/bathrooms_text"
                     app:layout_constraintStart_toEndOf="@id/rooms_text"
-                    app:layout_constraintTop_toBottomOf="@id/item_price" />
+                    app:layout_constraintTop_toBottomOf="@id/item_type" />
 
                 <TextView
                     android:id="@+id/bathrooms_text"
@@ -201,7 +201,31 @@
                     app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/bedrooms_text"
-                    app:layout_constraintTop_toBottomOf="@id/item_price" />
+                    app:layout_constraintTop_toBottomOf="@id/item_type" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/museum_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/marginEnd"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:visibility="@{property.museum? View.VISIBLE : View.GONE }"
+                    app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rooms_text"
+                    app:srcCompat="@drawable/ic_museum_24dp" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/marginEnd"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:text="@{property.description}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rooms_text" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
