- rename parcs to park in PropertyEntity.kt & Property.kt
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -290,7 +290,7 @@
                     android:paddingStart="@dimen/marginEnd"
                     android:paddingTop="8dp"
                     android:paddingEnd="@dimen/marginEnd"
-                    android:visibility="@{property.parcs? View.VISIBLE : View.GONE }"
+                    android:visibility="@{property.park? View.VISIBLE : View.GONE }"
                     app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
