--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -205,97 +205,84 @@
 
                 <TextView
                     android:id="@+id/nearby"
+                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingStart="@dimen/marginEnd"
-                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:paddingTop="8dp"
                     android:paddingEnd="@dimen/marginEnd"
                     android:text="@string/nearby"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/rooms_text" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/museum_icon"
+                <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/marginEnd"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="@dimen/marginEnd"
-                    android:visibility="@{property.museum? View.VISIBLE : View.GONE }"
-                    app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
                     app:layout_constraintStart_toEndOf="@id/nearby"
-                    app:layout_constraintTop_toBottomOf="@id/rooms_text"
-                    app:srcCompat="@drawable/ic_museum_24dp" />
+                    app:layout_constraintTop_toBottomOf="@id/rooms_text">
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/schools_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/marginEnd"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="@dimen/marginEnd"
-                    android:visibility="@{property.schools? View.VISIBLE : View.GONE }"
-                    app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
-                    app:layout_constraintEnd_toStartOf="@id/shops_icon"
-                    app:layout_constraintTop_toBottomOf="@id/rooms_text"
-                    app:srcCompat="@drawable/ic_school_24dp" />
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/museum_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="@dimen/marginEnd"
+                        android:paddingTop="8dp"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:visibility="@{property.museum? View.VISIBLE : View.GONE }"
+                        app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
+                        app:srcCompat="@drawable/ic_museum_24dp" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/shops_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/marginEnd"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="@dimen/marginEnd"
-                    android:visibility="@{property.shops? View.VISIBLE : View.GONE }"
-                    app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rooms_text"
-                    app:srcCompat="@drawable/ic_shopping_basket_24dp" />
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/schools_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="8dp"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:visibility="@{property.schools? View.VISIBLE : View.GONE }"
+                        app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
+                        app:srcCompat="@drawable/ic_school_24dp" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/hospital_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/marginEnd"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="@dimen/marginEnd"
-                    android:visibility="@{property.hospital? View.VISIBLE : View.GONE }"
-                    app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rooms_text"
-                    app:srcCompat="@drawable/ic_local_hospital_24dp" />
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/shops_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="8dp"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:visibility="@{property.shops? View.VISIBLE : View.GONE }"
+                        app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
+                        app:srcCompat="@drawable/ic_shopping_basket_24dp" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/station_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/marginEnd"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="@dimen/marginEnd"
-                    android:visibility="@{property.stations? View.VISIBLE : View.GONE }"
-                    app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rooms_text"
-                    app:srcCompat="@drawable/ic_train_24dp" />
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/hospital_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="8dp"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:visibility="@{property.hospital? View.VISIBLE : View.GONE }"
+                        app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
+                        app:srcCompat="@drawable/ic_local_hospital_24dp" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/park_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="@dimen/marginEnd"
-                    android:paddingTop="8dp"
-                    android:paddingEnd="@dimen/marginEnd"
-                    android:visibility="@{property.park? View.VISIBLE : View.GONE }"
-                    app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rooms_text"
-                    app:srcCompat="@drawable/baseline_park_24" />
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/station_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="8dp"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:visibility="@{property.stations? View.VISIBLE : View.GONE }"
+                        app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
+                        app:srcCompat="@drawable/ic_train_24dp" />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/park_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="8dp"
+                        android:paddingEnd="@dimen/marginEnd"
+                        android:visibility="@{property.park? View.VISIBLE : View.GONE }"
+                        app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
+                        app:srcCompat="@drawable/baseline_park_24" />
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
 
                 <TextView
                     android:layout_width="match_parent"
