--- a/app/src/main/res/layout/media_layout.xml
+++ b/app/src/main/res/layout/media_layout.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="property"
+            type="com.openclassrooms.realestatemanager.domain.model.property.Property" />
+
+        <variable
             name="viewModel"
             type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddPropertyViewModel" />
 
