--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -164,7 +164,6 @@
                     app:layout_constraintStart_toEndOf="@id/item_type"
                     app:layout_constraintTop_toBottomOf="@id/item_price" />
 
-
                 <TextView
                     android:id="@+id/rooms_text"
                     android:layout_width="wrap_content"
@@ -204,6 +203,30 @@
                     app:layout_constraintTop_toBottomOf="@id/item_type" />
 
                 <TextView
+                    android:id="@+id/description_title_text"
+                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/marginEnd"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:text="@string/description"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rooms_text" />
+
+                <TextView
+                    android:id="@+id/description_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:justificationMode="inter_word"
+                    android:paddingStart="@dimen/marginEnd"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:text="@{property.description}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/description_title_text" />
+
+                <TextView
                     android:id="@+id/nearby"
                     style="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:layout_width="wrap_content"
@@ -213,20 +236,22 @@
                     android:paddingEnd="@dimen/marginEnd"
                     android:text="@string/nearby"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rooms_text" />
+                    app:layout_constraintTop_toBottomOf="@id/description_text" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/marginEnd"
+                    android:paddingTop="9dp"
+                    android:paddingEnd="@dimen/marginEnd"
                     app:layout_constraintStart_toEndOf="@id/nearby"
-                    app:layout_constraintTop_toBottomOf="@id/rooms_text">
+                    app:layout_constraintTop_toBottomOf="@id/description_text">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/museum_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingStart="@dimen/marginEnd"
-                        android:paddingTop="8dp"
                         android:paddingEnd="@dimen/marginEnd"
                         android:visibility="@{property.museum? View.VISIBLE : View.GONE }"
                         app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
@@ -236,63 +261,71 @@
                         android:id="@+id/schools_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="8dp"
                         android:paddingEnd="@dimen/marginEnd"
                         android:visibility="@{property.schools? View.VISIBLE : View.GONE }"
                         app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
-                        app:srcCompat="@drawable/ic_school_24dp" />
+                        app:srcCompat="@drawable/ic_school_24dp"
+                        tools:ignore="RtlSymmetry" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/shops_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="8dp"
                         android:paddingEnd="@dimen/marginEnd"
                         android:visibility="@{property.shops? View.VISIBLE : View.GONE }"
                         app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
-                        app:srcCompat="@drawable/ic_shopping_basket_24dp" />
+                        app:srcCompat="@drawable/ic_shopping_basket_24dp"
+                        tools:ignore="RtlSymmetry" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/hospital_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="8dp"
                         android:paddingEnd="@dimen/marginEnd"
                         android:visibility="@{property.hospital? View.VISIBLE : View.GONE }"
                         app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
-                        app:srcCompat="@drawable/ic_local_hospital_24dp" />
+                        app:srcCompat="@drawable/ic_local_hospital_24dp"
+                        tools:ignore="RtlSymmetry" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/station_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="8dp"
                         android:paddingEnd="@dimen/marginEnd"
                         android:visibility="@{property.stations? View.VISIBLE : View.GONE }"
                         app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
-                        app:srcCompat="@drawable/ic_train_24dp" />
+                        app:srcCompat="@drawable/ic_train_24dp"
+                        tools:ignore="RtlSymmetry" />
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/park_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingTop="8dp"
                         android:paddingEnd="@dimen/marginEnd"
                         android:visibility="@{property.park? View.VISIBLE : View.GONE }"
                         app:drawableLeftCompat="@drawable/ic_bathroom_24dp"
-                        app:srcCompat="@drawable/baseline_park_24" />
+                        app:srcCompat="@drawable/baseline_park_24"
+                        tools:ignore="RtlSymmetry" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
-
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/location_text"
+                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingStart="@dimen/marginEnd"
                     android:paddingTop="8dp"
                     android:paddingEnd="@dimen/marginEnd"
-                    android:text="@{property.description}"
+                    android:text="@string/location"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/nearby" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/static_map_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/location_text" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
