--- a/app/src/main/res/layout/property_detail.xml
+++ b/app/src/main/res/layout/property_detail.xml
@@ -324,6 +324,10 @@
                     android:id="@+id/static_map_view"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
+                    android:paddingStart="@dimen/marginEnd"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="@dimen/marginEnd"
+                    android:paddingBottom="60dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/location_text" />
             </androidx.constraintlayout.widget.ConstraintLayout>
