- update  mobile_navigation.xml -> add tabs fragment - update content_main.xml -> change tabs graph to mobile_navigation.xml graph
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/propertyListFragment">
+    app:startDestination="@id/itemTabsFragment2">
 
     <fragment
         android:id="@+id/propertyListFragment"
@@ -61,4 +61,8 @@
         android:id="@+id/photoOptionDialogFragment"
         android:name="com.openclassrooms.realestatemanager.presentation.ui.addProperty.PhotoOptionDialogFragment"
         android:label="PhotoOptionDialogFragment" />
+    <fragment
+        android:id="@+id/itemTabsFragment2"
+        android:name="com.openclassrooms.realestatemanager.presentation.ui.ItemTabsFragment"
+        android:label="ItemTabsFragment" />
 </navigation>
