--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,7 +14,8 @@
             app:destination="@id/propertyDetailFragment" />
         <argument
             android:name="property"
-            app:argType="string"
+            android:defaultValue="@null"
+            app:argType="com.openclassrooms.realestatemanager.domain.model.property.Property"
             app:nullable="true" />
         <action
             android:id="@+id/action_propertyListFragment_to_addPropertyFragment"
