- correct bug when rotate --> add fragment factory & add orientation in manifest
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/src/main/res/layout-w900dp/property_list.xml
+++ b/app/src/main/res/layout-w900dp/property_list.xml
@@ -35,7 +35,7 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/item_detail_nav_container"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:name="com.openclassrooms.realestatemanager.presentation.utils.MainNavHostFragment"
             android:layout_width="0dp"
             android:layout_height="match_parent"
 
